All updates on 9/30

--- a/library.bib
+++ b/library.bib
@@ -1,8 +1,8 @@
 @misc{moshiten,
     author = "東北大学天文学教室",
-    title = "もしも君が杜の都で天文学者になったら2021",
+    title = "もしも君が杜の都で天文学者になったら2022",
     note = "\url{https://moshiten.studio.site/home}",
-    year = "2021"
+    year = "2022"
 }
 
 @misc{iraf,
@@ -19,7 +19,7 @@
     year = "2003"
 }
 
-@misc{colab
+@misc{colab,
     author = "Google",
     title = "Google Colaboratoryへようこそ",
     note = "\url{https://colab.research.google.com}"
