--- a/main.tex
+++ b/main.tex
@@ -16,17 +16,18 @@
 
 \mainmatter
 
-\include{chapters/chap1}
-\include{chapters/chap2}
-\include{chapters/chap3}
-\include{chapters/chap4}
-\include{chapters/chap5}
-\include{chapters/chap6}
+\include{chapters/Introduction}
+\include{chapters/Fandamentals_astr}
+\include{chapters/Fandamentals_obs}
+\include{chapters/Fandamentals_mosi}
+\include{chapters/Fandamentals_ana}
+\include{chapters/Fandamentals_disc}
+\include{chapters/Conclusion}
 
-\bibliographystyle{jecon}
+\bibliographystyle{jplain}
 \bibliography{library}
 \label{page:bib}
 
-\include{chapters/chap_appendix}
+\include{chapters/Appendix}
 
 \end{document}
