--- a/preamble.tex
+++ b/preamble.tex
@@ -6,37 +6,27 @@
 %package類
 %%%%%%%%%%%%%%%%%%%%
 \usepackage[utf8]{inputenc} % エンコーディングが UTF8 であることを明示する。
-%文書内リンク
+%\usepackage[deluxe]{otf}
 % OTF フォントを使えるようにし、複数のウェイトも使用可能にする。
 % これがないと、Mac のヒラギノ環境で使われる角ゴが太すぎてみっともない。
-%\usepackage[deluxe]{otf}
-
-% OT1→T1に変更し、ウムラウトなどを PDF 出力で合成文字ではなくす
 \usepackage[T1]{fontenc}
-
-% uplatex の場合に必要な処理
+% OT1→T1に変更し、ウムラウトなどを PDF 出力で合成文字ではなくす
 \usepackage[prefernoncjk]{pxcjkcat} % アクセントつきラテン文字を欧文扱いにする
-
+% uplatex の場合に必要な処理
+\usepackage[scaled=1.05,helvratio=0.95]{newtxtext}
 % Helvetica と Times を sf と rm のそれぞれで使う。
 % default だとバランスが悪いので、日本語に合わせて文字の大きさを調整する。
-\usepackage[scaled=1.05,helvratio=0.95]{newtxtext}
-
-% 色
-\usepackage[dvipdfmx]{color}
+\usepackage[dvipdfmx]{color} % 色
 \usepackage[colorlinks=true,allcolors=blue]{hyperref}
-\usepackage{pxjahyper}%文字化け防止
-
-\usepackage{array,amsmath,amssymb,bm,cases}%数式でよく使うもの
-
-\usepackage[dvipdfmx]{graphicx}%画像使用
-
+%\usepackage{hyperref} % 紙に印刷するときは青文字リンクは消す。
+\usepackage{pxjahyper} % 文字化け防止
+\usepackage{array,amsmath,amssymb,bm,cases} % 数式でよく使うもの
+\usepackage[dvipdfmx]{graphicx} % 画像使用
 \usepackage{url}
-
-\usepackage{natbib}
-
-\usepackage{ascmac}%itembox環境
-
-\usepackage{enumerate}%enumerate環境
+%\usepackage{natbib}
+\usepackage[numbers]{natbib} % bibliographystyleを「jplain」にした時、エラーが出るならこちらを試す
+\usepackage{ascmac} % itembox環境
+\usepackage{enumerate} % enumerate環境
 
 % bibliography を目次に追加
 \usepackage[nottoc,notlot,notlof]{tocbibind}
@@ -50,7 +40,7 @@
 
 \allowdisplaybreaks[4] % 数式がページをまたがることを許す
 
-\usepackage{listings,jvlisting} %日本語のコメントアウトをする場合jvlisting（もしくはjlisting）が必要
+\usepackage{listings,jvlisting}
 %ここからソースコードの表示に関する設定
 \lstset{
   basicstyle={\ttfamily},
@@ -100,79 +90,18 @@
 %newcommand類
 %%%%%%%%%%%%%%%%%%%%
 \newcommand{\bs}{\symbol{92}} %backslash
-
 \newcommand{\red}[1]{\textcolor{red}{#1}} %文字色赤
-
 \newcommand{\blue}[1]{\textcolor{blue}{#1}} %文字色青
-
 \newcommand{\green}[1]{\textcolor{green}{#1}} %文字色緑
-
 \newcommand{\ured}[1]{\textcolor{red}{\underline{\textcolor{black}{#1}}}} %下線赤
-
-\newcommand{\ugreen}[1]{\textcolor{green}{\underline{\textcolor{black}{#1}}}} %下線緑
-
 \newcommand{\ublue}[1]{\textcolor{blue}{\underline{\textcolor{black}{#1}}}} %下線青
+\newcommand{\ugreen}[1]{\textcolor{green}{\underline{\textcolor{black}{#1}}}} %下線緑
 %%%%%%%%%%%%%%%%%%%%
-
-\makeatletter
-
-\def\seireki#1{\def\@seireki{#1}} % 西暦での年度
-\def\supervisor#1{\def\@supervisor{#1}} % 担当教員
-\def\SyozokuUniv#1{\def\@SyozokuUniv{#1}} %所属大学
-\def\SyozokuGakubu#1{\def\@SyozokuGakubu{#1}} %所属学部
-\def\SyozokuGakka#1{\def\@SyozokuGakka{#1}} %所属学科
-\def\StudentIdNumber#1{\def\@StudentIdNumber{#1}} % 学籍番号
-\def\subject#1{\def\@subject{#1}} %教科名
-
-\renewcommand{\maketitle}{%
-  \begin{titlepage}%
-    \let\footnotesize\small
-    \let\footnoterule\relax
-    \let\footnote\thanks
-    \null\vfil
-    \vskip 20\p@
-    \begin{center}%
-      {\Large もし天{\@seireki}年度版 \par}%
-      \vskip 12em%
-      {\LARGE \@title \par}%
-      \vskip 15em%
-      {\large
-        \begin{tabular}[t]{c}%
-          \@SyozokuUniv 天文学教室
-        \end{tabular}\par}%
-      \vskip 5em%
-      {\large
-        \begin{tabular}[t]{c}%
-            {\Large \@author}
-        \end{tabular}\par}%
-      \vskip 1.5em
-      {\large \@date \par}%
-    \end{center}%
-    \par
-    \@thanks\vfil\null
-  \end{titlepage}%
-  \setcounter{footnote}{0}%
-  \global\let\thanks\relax
-  \global\let\maketitle\relax
-  \global\let\@thanks\@empty
-  \global\let\@author\@empty
-  \global\let\@date\@empty
-  \global\let\@title\@empty
-  \global\let\title\relax
-  \global\let\author\relax
-  \global\let\date\relax
-  \global\let\and\relax
-}%
-
-\makeatother
 
 %%ここからを自分で書く
 %%%%%%%%
-\title{天文データ解析概論}
+\title{もし天における天体観測と解析のすすめ}
 \date{\today} %日付
-\seireki{2021} %年度
-\author{天文B3\,SLA一同} %名前
-
-\SyozokuUniv{東北大学} %所属大学
+\author{東北大天文学部生SLA一同} %名前
 %%%%%%%%
 %%ここまでを自分で書く
